# menus

./: .dockerignore  .env_example  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.testing  README.md  alembic.ini  config.py  database.py  docker-compose.dev.yml  docker-compose.tests.yml  docker-compose.yml  docker-entrypoint.dev.sh  docker-entrypoint.sh  docker-entrypoint.tests.sh  logger_config.py  main.py  menu app.postman_test_run.json  openapi.json  pyproject.toml
admin/: Menu.xlsx
app/: main.py
app/migrations/versions/: d4bb8ac1083f_init.py  e2c05b762128_init.py
app/models/: __init__.py  dish.py  menu.py  submenu.py
app/routes/: __init__.py  dish.py  menu.py  submenu.py
app/routes/schemas/: dish.py  menu.py  submenu.py
migrations/: env.py
migrations/versions/: 07176f083c24_init.py  2023-07-30_72c4c6c24f2a_init.py  2023-08-12_d0adbbc46efa_added_cascade_delete.py  2023-08-14_e1f879d0adfd_change_size_char.py  2023-08-16_db0cc72330c6_added_discount.py  235bf8fc6c6d_init.py  3c23a8ea7011_init.py  5d38c86247b4_init.py  72c4c6c24f2a_init.py  8cf422aeeca8_message.py
models/: __init__.py  dish.py  menu.py  submenu.py
repositories/: all.py  dish.py  menu.py  submenu.py
routes/: __init__.py  all.py  dish.py  menu.py  menus.py  submenu.py
routes/schemas/: dish.py  menu.py  submenu.py
schemas/: dish.py  menu.py  submenu.py
services/: all.py  cache.py  dish.py  menu.py  submenu.py
servises/: cache.py  dish.py  menu.py  submenu.py
tasks/: read_files.py  tasks.py
tests/: conftest.py  fixtures.py  test_counts.py  test_dish.py  test_get_all.py  test_menu.py  test_submenu.py
