[tool.poetry]
name = "menus-ylab"
version = "0.1.0"
description = ""
authors = ["Nella <nella611@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.100.0"
uvicorn = "^0.23.1"
sqlalchemy = "^2.0.19"
alembic = "^1.11.1"
python-dotenv = "^1.0.0"
pydantic = "^2.0.3"
redis = "^4.6.0"
asyncpg = "^0.28.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
httpx = "^0.24.1"
pytest-postgresql = "^5.0.0"
testcontainers = "^3.7.1"
pre-commit = "^3.3.3"
logger = "^1.4"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest.ini_options]
pythonpath = [
  ".",
]
asyncio_mode="auto"
